# usserviceeventlistener

./: .travis.yml  CMakeLists.txt  ServiceEventListenerActivator.cpp  ServiceEventListenerActivator.h  appveyor.yml  biicode.conf
bii/: parents.bii  requirements.bii
test/: CMakeLists.txt  main.cpp  usServiceEventListenerTestConfig.h.in
